pushing again to fix hash issue. also played around with string spacing

--- a/public_html/less/browser.less
+++ b/public_html/less/browser.less
@@ -63,7 +63,7 @@
   //z-index:10;
   position: relative;
   top:-5px;
-  left:357px;
+  left:322px;
   
   display:block;
   
@@ -76,7 +76,7 @@
   
   span {
     padding:6px 15px;
-    border: 2px solid @textGray;
+    border: 1px solid @gray;
     .border-radiuses(4px, 0, 0, 4px);
     text-transform:uppercase;
     color:@darkGray;
@@ -162,7 +162,7 @@
       cursor: pointer;
       background-color: white;
       padding: 8px 0;
-      margin: 4px 0;
+      margin: 5px 0 0 10px;
 
       
       &:hover {
@@ -218,6 +218,7 @@
           display: block;
           margin: auto;
           width: 10px;
+          opacity: 0.2;
         }
         
         -webkit-transition: -webkit-transform .5s;
