--- a/public_html/less/ribbon.less
+++ b/public_html/less/ribbon.less
@@ -3,7 +3,8 @@
   height: 55px;
   overflow: hidden;
   position: relative;
-  
+  margin-bottom: 3px; 
+
   //box-shadow: inset 0 2px 2px 0 rgba(255, 255, 255, 1), inset 0 -1.5px 1px 0 rgba(255, 255, 255, 1);
 
 
